# adaptagrams

./: .gitignore  CMakeLists.txt  CMakePresets.json
cola/: CMakeLists.txt
cola/libavoid/: ANode.hxx  ANodeCmp.hxx  AStarPath.cxx  AStarPath.hxx  AStarPathPrivate.cxx  AStarPathPrivate.hxx  ActionInfo.cxx  ActionInfo.hxx  ActionType.hxx  Block.cxx  Block.hxx  Blocks.cxx  Blocks.hxx  Box.cxx  Box.hxx  CMakeLists.txt  Checkpoint.hxx  ClusterRef.cxx  ClusterRef.hxx  CmpEdgeInf.cxx  CmpEdgeInf.hxx  CmpIndexes.hxx  CmpLineOrder.hxx  CmpNodePos.cxx  CmpNodePos.hxx  CmpVertInf.hxx  CmpVisEdgeRotation.hxx  CompareConstraints.cxx  CompareConstraints.hxx  ConnDirFlag.hxx  ConnEndType.hxx  ConnRef.cxx  ConnRef.hxx  ConnRerouteFlagDelegate.hxx  ConnType.hxx  ConnectorCrossings.cxx  ConnectorCrossings.hxx  Constraint.cxx  Constraint.hxx  DebugHandler.hxx  (+104 more)
cola/libavoid/tests/msctests/: 2junctions.vcxproj  buildOrthogonalChannelInfo1.vcxproj  checkpointNudging1.vcxproj  checkpointNudging2.vcxproj  checkpoints01.vcxproj  connectionpin01.vcxproj  connectionpin02.vcxproj  connectionpin03.vcxproj  connendmove.vcxproj  corneroverlap01.vcxproj  example.vcxproj  finalSegmentNudging1.vcxproj  finalSegmentNudging2.vcxproj  finalSegmentNudging3.vcxproj  freeFloatingDirection01.vcxproj  junction01.vcxproj
cola/libcola/: CMakeLists.txt  Cluster.cxx  Cluster.hxx  Component.cxx  CompoundConstraint.cxx  CompoundConstraint.hxx  ConstrainedFDLayout.cxx  ConstrainedFDLayout.hxx  ConstrainedMajorizationLayout.cxx  ConstrainedMajorizationLayout.hxx  DesiredPosition.hxx  GradientProjection.cxx  GradientProjection.hxx  Lock.hxx  NonOverlapConstraints.cxx  NonOverlapConstraints.hxx  PreIteration.hxx  ProjectionResult.hxx  PseudoRandom.cxx  PseudoRandom.hxx  Resize.hxx  ShapePair.cxx  ShapePair.hxx  SparseMatrix.hxx  Straightener.cxx  Straightener.hxx  TestConvergence.hxx  TopologyAddonInterface.hxx  cola.cpp  cola.h  cola_log.h  colafd.cpp  commondefs.h  conjugate_gradient.cpp  connected_components.h  convex_hull.cpp  convex_hull.h  output_svg.h  shortest_paths.h
cola/libdialect/: CMakeLists.txt
cola/libproject/: CMakeLists.txt  Log.hxx  Project.cxx  Project.hxx  Util.cxx  Util.hxx  project_log.h
cola/libtopology/: CMakeLists.txt  ColaTopologyAddon.cxx  ColaTopologyAddon.hxx  Edge.hxx  EdgePoint.hxx  Node.hxx  Segment.hxx  TopologyConstraint.cxx  TopologyConstraint.hxx  compute_forces.cpp  orthogonal_topology.cpp  orthogonal_topology.h  topology_constraints_constructor.cpp  topology_graph.h  topology_log.h
cola/libvpsc/: Block.cxx  Block.hxx  Blocks.cxx  Blocks.hxx  CBuffer.cxx  CBuffer.hxx  CMakeLists.txt  Constraint.cxx  Constraint.hxx  LineSegment.hxx  PairingHeap.hxx  Rectangle.cxx  Rectangle.hxx  RectangleIntersections.hxx  Solver.cxx  Solver.hxx  Variable.cxx  Variable.hxx
todo/: README.md
